fix z-index && fix blur

--- a/skin/algoliasearch.css
+++ b/skin/algoliasearch.css
@@ -6,6 +6,7 @@
     top: 30px;
     width: 100%;
     border-bottom: solid 1px #DDDDDD;
+    z-index: 1000;
 }
 
 .algoliasearch-autocomplete-title {
